compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_two_floats.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<a:float-32, b:float-32>> -> #(a, b)\n    _ -> #(0.0, 0.0)\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:float-32, b:float-32>> -> #(a, b)
    _ -> #(0.0, 0.0)
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 32) {
    let $;
    if (
      Number.isFinite($ = bitArraySliceToFloat(x, 0, 32, true)) &&
      x.bitSize === 64
    ) {
      let $1;
      if (Number.isFinite($1 = bitArraySliceToFloat(x, 32, 64, true))) {
        let a = $;
        let b = $1;
        return [a, b];
      } else {
        return [0.0, 0.0];
      }
    } else {
      return [0.0, 0.0];
    }
  } else {
    return [0.0, 0.0];
  }
}
