compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_with_remaining_bytes_after_constant_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1860
expression: "\npub fn go(x) {\n  case x {\n    <<_, _, _:bytes>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_, _, _:bytes>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize >= 8) {
    if (x.bitSize >= 16) {
      if ((x.bitSize - 16) % 8 === 0) {
        return 1;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
