compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__different_bodies_not_simplified.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(bits) {\n  case bits {\n    <<_:16, _:bytes>> -> 1\n    <<_:bytes>> -> 2\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(bits) {
  case bits {
    <<_:16, _:bytes>> -> 1
    <<_:bytes>> -> 2
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(bits) {
  if (bits.bitSize >= 16) {
    if (bits.bitSize % 8 === 0) {
      return 1;
    } else {
      return 0;
    }
  } else if (bits.bitSize % 8 === 0) {
    return 2;
  } else {
    return 0;
  }
}
