compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__empty.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go() {\n  <<>>\n}\n"
---
----- SOURCE CODE

pub fn go() {
  <<>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([]);
}
