compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__explicit_sized_constant_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go() {\n  <<256:size(32)>>\n}\n"
---
----- SOURCE CODE

pub fn go() {
  <<256:size(32)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([0, 0, 1, 0]);
}
